--- a/src/components/css/Hero.css
+++ b/src/components/css/Hero.css
@@ -13,6 +13,7 @@
 	font-size: 36px;
 	font-weight: 600;
 	margin: 0;
+	margin-left: 35px;
 }
 
 .hero-p-container {
@@ -23,4 +24,5 @@
 	color: #222222;
 	font-size: 16px;
 	font-weight: 300;
+	margin-left: 35px;
 }
